--- a/index.html
+++ b/index.html
@@ -454,6 +454,61 @@
                                 </div>
                             </div>
                         </div>
+                        <!-- James Cheng -->
+                        <div class="col-md-4 animatable fadeInUp">
+                            <div class="card card-profile card-plain">
+                                <div class="card-avatar">
+                                    <a href="#avatar"><img src="./assets/img/faces/james.jpeg" alt="..."></a>
+                                </div>
+                                <div class="card-body">
+                                    <a href="#paper-kit">
+                                        <div class="author">
+                                            <h4 class="card-title">James Cheng</h4>
+                                            <h6 class="card-category"></h6>
+                                        </div>
+                                    </a>
+                                    <p class="card-description text-center">
+                                    </p>
+                                </div>
+                            </div>
+                        </div>
+                        <!-- Patrick Pan -->
+                        <div class="col-md-4 animatable fadeInUp">
+                            <div class="card card-profile card-plain">
+                                <div class="card-avatar">
+                                    <a href="#avatar"><img src="./assets/img/faces/patrick.jpeg" alt="..."></a>
+                                </div>
+                                <div class="card-body">
+                                    <a href="#paper-kit">
+                                        <div class="author">
+                                            <h4 class="card-title">Patrick Pan</h4>
+                                            <h6 class="card-category"></h6>
+                                        </div>
+                                    </a>
+                                    <p class="card-description text-center">
+                                    </p>
+                                </div>
+                            </div>
+                        </div>
+                        <!-- Sachin Samarasinghe -->
+                        <div class="col-md-4 animatable fadeInUp">
+                            <div class="card card-profile card-plain">
+                                <div class="card-avatar">
+                                    <a href="#avatar"><img src="./assets/img/faces/sachin.jpg" alt="..."></a>
+                                </div>
+                                <div class="card-body">
+                                    <a href="#paper-kit">
+                                        <div class="author">
+                                            <h4 class="card-title">Sachin Samarasinghe</h4>
+                                            <h6 class="card-category"></h6>
+                                        </div>
+                                    </a>
+                                    <p class="card-description text-center">
+                                    </p>
+                                </div>
+                            </div>
+                        </div>
+
                     </div>
                     <!-- Advisors -->
                     <h2 class="title animatable fadeInUp">Advisors</h2>
