--- a/index.html
+++ b/index.html
@@ -333,6 +333,13 @@
                             </div>
                         </div>
                     </div>
+                    <div class="row">
+                            <div class="col-md-12 ml-auto mr-auto">
+                                <img src=assets/img/
+                            </div>
+
+
+                    </div>
                 </div>
             </div>
             <!-- Our Team -->
