updated season schedule

--- a/index.html
+++ b/index.html
@@ -335,7 +335,7 @@
                     </div>
                     <div class="row">
                             <div class="col-md-12 ml-auto mr-auto">
-                                <img src=assets/img/
+                                <img src="assets/img/schedule.png" style="width:inherit">
                             </div>
 
 
