update robomaster intro

--- a/index.html
+++ b/index.html
@@ -201,6 +201,33 @@
         </div>
         <!-- Main -->
         <div class="main">
+            <!-- About RoboMaster -->
+            <div id="robomaster" class="section text-center container-fluid">
+                <div class="container">
+                    <div class="row animatable fadeInUp">
+                        <div class="col-md-8 ml-auto mr-auto">
+                                <br>
+                                <br>
+                            <img src="assets/img/robomaster.png" style="width: inherit">
+                            <br>
+                            <br>
+                            <br>
+                            <h5 id="test" class="description animated">RoboMaster Robotics Competition focuses on the
+                                comprehensive application and engineering practice ability of the participating members
+                                in science and engineering disciplines, fully integrating many robot related technical
+                                disciplines such as "machine vision", "embedded system design", "mechanical control",
+                                "inertial navigation", "human-computer interaction", etc. At the same time, the
+                                innovative combination of e-sports presentation and robotic competition makes the robot
+                                confrontation more intuitive and intense, attracting the attention and participation of
+                                many technology enthusiasts and the public.
+                            </h5>
+                            <br>
+                            <!-- <a href="#paper-kit" class="btn btn-danger btn-round">See Details</a> -->
+                        </div>
+                    </div>
+                </div>
+            </div>
+
             <!-- About Us -->
             <div id="about" class="section text-center container-fluid">
                 <div class="container">
@@ -334,9 +361,9 @@
                         </div>
                     </div>
                     <div class="row">
-                            <div class="col-md-12 ml-auto mr-auto">
-                                <img src="assets/img/schedule.png" style="width:inherit">
-                            </div>
+                        <div class="col-md-12 ml-auto mr-auto">
+                            <img src="assets/img/schedule.png" style="width:inherit">
+                        </div>
 
 
                     </div>
