--- a/index.html
+++ b/index.html
@@ -376,7 +376,7 @@
                     <h2 class="title animatable fadeInUp">Executives</h2>
                     <div class="row">
                         <!-- JBC -->
-                        <div class="col-md-4 animatable fadeInUp">
+                        <div class="col-md-3 animatable fadeInUp">
                             <div class="card card-profile card-plain">
                                 <div class="card-avatar">
                                     <a href="#avatar"><img src="./assets/img/faces/jbc.jpg" alt="..."></a>
@@ -399,7 +399,7 @@
                             </div>
                         </div>
                         <!-- Haoran Liu -->
-                        <div class="col-md-4 animatable fadeInUp">
+                        <div class="col-md-3 animatable fadeInUp">
                             <div class="card card-profile card-plain">
                                 <div class="card-avatar">
                                     <a href="#avatar"><img src="./assets/img/faces/haoran2.jpg" alt="..."></a>
@@ -416,26 +416,8 @@
                                 </div>
                             </div>
                         </div>
-                        <!-- Leo Liu -->
-                        <div class="col-md-4 animatable fadeInUp">
-                            <div class="card card-profile card-plain">
-                                <div class="card-avatar">
-                                    <a href="#avatar"><img src="./assets/img/faces/leo.jpg" alt="..."></a>
-                                </div>
-                                <div class="card-body">
-                                    <a href="#paper-kit">
-                                        <div class="author">
-                                            <h4 class="card-title">Leo Liu</h4>
-                                            <h6 class="card-category"></h6>
-                                        </div>
-                                    </a>
-                                    <p class="card-description text-center">
-                                    </p>
-                                </div>
-                            </div>
-                        </div>
                         <!-- Jarvis Wang -->
-                        <div class="col-md-4 animatable fadeInUp">
+                        <div class="col-md-3 animatable fadeInUp">
                             <div class="card card-profile card-plain">
                                 <div class="card-avatar">
                                     <a href="#avatar"><img src="./assets/img/faces/jarvis.jpg" alt="..."></a>
@@ -453,7 +435,7 @@
                             </div>
                         </div>
                         <!-- Edward Yu -->
-                        <div class="col-md-4 animatable fadeInUp">
+                        <div class="col-md-3 animatable fadeInUp">
                             <div class="card card-profile card-plain">
                                 <div class="card-avatar">
                                     <a href="#avatar"><img src="./assets/img/faces/edward.jpg" alt="..."></a>
@@ -470,8 +452,26 @@
                                 </div>
                             </div>
                         </div>
+                        <!-- Leo Liu -->
+                        <div class="col-md-3 animatable fadeInUp">
+                            <div class="card card-profile card-plain">
+                                <div class="card-avatar">
+                                    <a href="#avatar"><img src="./assets/img/faces/leo.jpg" alt="..."></a>
+                                </div>
+                                <div class="card-body">
+                                    <a href="#paper-kit">
+                                        <div class="author">
+                                            <h4 class="card-title">Leo Liu</h4>
+                                            <h6 class="card-category"></h6>
+                                        </div>
+                                    </a>
+                                    <p class="card-description text-center">
+                                    </p>
+                                </div>
+                            </div>
+                        </div>
                         <!-- Tony Yang -->
-                        <div class="col-md-4 animatable fadeInUp">
+                        <div class="col-md-3 animatable fadeInUp">
                             <div class="card card-profile card-plain">
                                 <div class="card-avatar">
                                     <a href="#avatar"><img src="./assets/img/faces/tony.jpg" alt="..."></a>
@@ -489,7 +489,7 @@
                             </div>
                         </div>
                         <!-- James Cheng -->
-                        <div class="col-md-4 animatable fadeInUp">
+                        <div class="col-md-3 animatable fadeInUp">
                             <div class="card card-profile card-plain">
                                 <div class="card-avatar">
                                     <a href="#avatar"><img src="./assets/img/faces/james.jpeg" alt="..."></a>
@@ -507,7 +507,7 @@
                             </div>
                         </div>
                         <!-- Patrick Pan -->
-                        <div class="col-md-4 animatable fadeInUp">
+                        <div class="col-md-3 animatable fadeInUp">
                             <div class="card card-profile card-plain">
                                 <div class="card-avatar">
                                     <a href="#avatar"><img src="./assets/img/faces/patrick.jpeg" alt="..."></a>
@@ -525,7 +525,7 @@
                             </div>
                         </div>
                         <!-- Sachin Samarasinghe -->
-                        <div class="col-md-4 animatable fadeInUp">
+                        <div class="col-md-3 animatable fadeInUp">
                             <div class="card card-profile card-plain">
                                 <div class="card-avatar">
                                     <a href="#avatar"><img src="./assets/img/faces/sachin.jpg" alt="..."></a>
@@ -548,7 +548,7 @@
                     <h2 class="title animatable fadeInUp">Advisors</h2>
                     <div class="row animatable fadeInUp">
                         <!-- Dr. Yaser Haddara -->
-                        <div class="col-md-4 animatable fadeInUp">
+                        <div class="col-md-3 animatable fadeInUp">
                             <div class="card card-profile card-plain">
                                 <div class="card-avatar">
                                     <a href="#avatar"><img src="./assets/img/faces/yaser.jpg" alt="..."></a>
@@ -567,7 +567,7 @@
                             </div>
                         </div>
                         <!-- Dr. Tim Davidson -->
-                        <div class="col-md-4 animatable fadeInUp">
+                        <div class="col-md-3 animatable fadeInUp">
                             <div class="card card-profile card-plain">
                                 <div class="card-avatar">
                                     <a href="#avatar"><img src="./assets/img/faces/davidsontim.jpg" alt="..."></a>
@@ -586,7 +586,7 @@
                             </div>
                         </div>
                         <!-- Dr. Shahin Sirouspour -->
-                        <div class="col-md-4 animatable fadeInUp">
+                        <div class="col-md-3 animatable fadeInUp">
                             <div class="card card-profile card-plain">
                                 <div class="card-avatar">
                                     <a href="#avatar"><img src="./assets/img/faces/sirouspour.jpg" alt="..."></a>
@@ -602,6 +602,26 @@
                                         Department of Electrical & Computer Engineering
                                         <br />
                                         McMaster School of Biomedical Engineering
+                                    </p>
+                                </div>
+                            </div>
+                        </div>
+                        <!-- Dr. Shahram Shirani -->
+                        <div class="col-md-3 animatable fadeInUp">
+                            <div class="card card-profile card-plain">
+                                <div class="card-avatar">
+                                    <a href="#avatar"><img src="./assets/img/faces/shirani.jpg" alt="..."></a>
+                                </div>
+                                <div class="card-body">
+                                    <a href="#paper-kit">
+                                        <div class="author">
+                                            <h4 class="card-title">Dr. Shahram Shirani</h4>
+                                            <h6 class="card-category">Associate Chair</h6>
+                                        </div>
+                                    </a>
+                                    <p class="card-description text-center">
+                                        Department of Electrical & Computer Engineering
+                                        
                                     </p>
                                 </div>
                             </div>
