update exec info

--- a/index.html
+++ b/index.html
@@ -524,16 +524,16 @@
                                 </div>
                             </div>
                         </div>
-                        <!-- Sachin Samarasinghe -->
+                        <!-- Raghib Mahtab Quader -->
                         <div class="col-md-3 animatable fadeInUp">
                             <div class="card card-profile card-plain">
                                 <div class="card-avatar">
-                                    <a href="#avatar"><img src="./assets/img/faces/sachin.jpg" alt="..."></a>
+                                    <a href="#avatar"><img src="./assets/img/faces/raghib.jpg" alt="..."></a>
                                 </div>
                                 <div class="card-body">
                                     <a href="#paper-kit">
                                         <div class="author">
-                                            <h4 class="card-title">Sachin Samarasinghe</h4>
+                                            <h4 class="card-title">Raghib Mahtab Quader</h4>
                                             <h6 class="card-category"></h6>
                                         </div>
                                     </a>
