--- a/index.html
+++ b/index.html
@@ -305,9 +305,9 @@
 
             <!-- Projects -->
             <div id="projects" class="section text-center container-fluid" id="carousel" style="background-color: #292E39">
-                <div class="container animatable fadeInUp">
-                    <h1 class="title" style="color:white">Projects</h1>
-                    <div class="row">
+                <div class="container">
+                    <h1 class="title animatable fadeInUp" style="color:white">Projects</h1>
+                    <div class="row animatable fadeInUp">
                         <div class="col-md-8 ml-auto mr-auto">
                             <!-- need revise -->
                             <div class="card page-carousel" style="background-color: #292E39">
@@ -360,7 +360,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="row">
+                    <div class="row animatable fadeInUp">
                         <div class="col-md-12 ml-auto mr-auto">
                             <img src="assets/img/schedule.png" style="width:inherit">
                         </div>
