--- a/index.html
+++ b/index.html
@@ -379,7 +379,7 @@
                         <div class="col-md-4 animatable fadeInUp">
                             <div class="card card-profile card-plain">
                                 <div class="card-avatar">
-                                    <a href="#avatar"><img src="./assets/img/faces/jbc.jpg" alt="..."></a>
+                                    <a href="https://www.linkedin.com/in/bingchen-ji-947093135/"><img src="./assets/img/faces/jbc.jpg" alt="..."></a>
                                 </div>
                                 <div class="card-body">
                                     <a href="#paper-kit">
@@ -402,7 +402,7 @@
                         <div class="col-md-4 animatable fadeInUp">
                             <div class="card card-profile card-plain">
                                 <div class="card-avatar">
-                                    <a href="#avatar"><img src="./assets/img/faces/haoran2.jpg" alt="..."></a>
+                                    <a href="https://www.linkedin.com/in/haoran-liu/"><img src="./assets/img/faces/haoran2.jpg" alt="..."></a>
                                 </div>
                                 <div class="card-body">
                                     <a href="#paper-kit">
@@ -420,7 +420,7 @@
                         <div class="col-md-4 animatable fadeInUp">
                             <div class="card card-profile card-plain">
                                 <div class="card-avatar">
-                                    <a href="#avatar"><img src="./assets/img/faces/jarvis.jpg" alt="..."></a>
+                                    <a href="https://www.linkedin.com/in/jarvis-wang/"><img src="./assets/img/faces/jarvis.jpg" alt="..."></a>
                                 </div>
                                 <div class="card-body">
                                     <a href="#paper-kit">
@@ -474,7 +474,7 @@
                         <div class="col-md-4 animatable fadeInUp">
                             <div class="card card-profile card-plain">
                                 <div class="card-avatar">
-                                    <a href="#avatar"><img src="./assets/img/faces/tony.jpg" alt="..."></a>
+                                    <a href="https://www.linkedin.com/in/tonyangz/"><img src="./assets/img/faces/tony.jpg" alt="..."></a>
                                 </div>
                                 <div class="card-body">
                                     <a href="#paper-kit">
@@ -492,7 +492,7 @@
                         <div class="col-md-4 animatable fadeInUp">
                             <div class="card card-profile card-plain">
                                 <div class="card-avatar">
-                                    <a href="#avatar"><img src="./assets/img/faces/james.jpeg" alt="..."></a>
+                                    <a href="https://www.linkedin.com/in/james-cheng-5a5a08123/"><img src="./assets/img/faces/james.jpeg" alt="..."></a>
                                 </div>
                                 <div class="card-body">
                                     <a href="#paper-kit">
@@ -524,16 +524,16 @@
                                 </div>
                             </div>
                         </div>
-                        <!-- Raghib Mahtab Quader -->
+                        <!-- Raghib Quader -->
                         <div class="col-md-4 animatable fadeInUp">
                             <div class="card card-profile card-plain">
                                 <div class="card-avatar">
-                                    <a href="#avatar"><img src="./assets/img/faces/raghib.jpg" alt="..."></a>
+                                    <a href="https://www.linkedin.com/in/raghibq/"><img src="./assets/img/faces/raghib.jpg" alt="..."></a>
                                 </div>
                                 <div class="card-body">
                                     <a href="#paper-kit">
                                         <div class="author">
-                                            <h4 class="card-title">Raghib Mahtab Quader</h4>
+                                            <h4 class="card-title">Raghib Quader</h4>
                                             <h6 class="card-category"></h6>
                                         </div>
                                     </a>
