update lead info

--- a/index.html
+++ b/index.html
@@ -506,16 +506,16 @@
                                 </div>
                             </div>
                         </div>
-                        <!-- Patrick Pan -->
+                        <!-- Rudy Liu -->
                         <div class="col-md-4 animatable fadeInUp">
                             <div class="card card-profile card-plain">
                                 <div class="card-avatar">
-                                    <a href="#avatar"><img src="./assets/img/faces/patrick.jpeg" alt="..."></a>
+                                    <a href="#avatar"><img src="./assets/img/faces/rudy.jpg" alt="..."></a>
                                 </div>
                                 <div class="card-body">
                                     <a href="#paper-kit">
                                         <div class="author">
-                                            <h4 class="card-title">Patrick Pan</h4>
+                                            <h4 class="card-title">Rudy Liu</h4>
                                             <h6 class="card-category"></h6>
                                         </div>
                                     </a>
