update personal information

--- a/index.html
+++ b/index.html
@@ -438,7 +438,7 @@
                         <div class="col-md-4 animatable fadeInUp">
                             <div class="card card-profile card-plain">
                                 <div class="card-avatar">
-                                    <a href="#avatar"><img src="./assets/img/faces/edward.jpg" alt="..."></a>
+                                    <a href="https://www.linkedin.com/in/zeyi-yu-4ab80aa6/"><img src="./assets/img/faces/edward.jpg" alt="..."></a>
                                 </div>
                                 <div class="card-body">
                                     <a href="#paper-kit">
@@ -456,7 +456,7 @@
                         <div class="col-md-4 animatable fadeInUp">
                             <div class="card card-profile card-plain">
                                 <div class="card-avatar">
-                                    <a href="#avatar"><img src="./assets/img/faces/leo.jpg" alt="..."></a>
+                                    <a href="https://www.linkedin.com/in/chengxin-liu/"><img src="./assets/img/faces/leo.jpg" alt="..."></a>
                                 </div>
                                 <div class="card-body">
                                     <a href="#paper-kit">
@@ -510,7 +510,7 @@
                         <div class="col-md-4 animatable fadeInUp">
                             <div class="card card-profile card-plain">
                                 <div class="card-avatar">
-                                    <a href="#avatar"><img src="./assets/img/faces/rudy.jpg" alt="..."></a>
+                                    <a href="https://www.linkedin.com/in/rudy-liu-a40072136/"><img src="./assets/img/faces/rudy.jpg" alt="..."></a>
                                 </div>
                                 <div class="card-body">
                                     <a href="#paper-kit">
@@ -551,7 +551,7 @@
                         <div class="col-md-3 animatable fadeInUp">
                             <div class="card card-profile card-plain">
                                 <div class="card-avatar">
-                                    <a href="#avatar"><img src="./assets/img/faces/yaser.jpg" alt="..."></a>
+                                    <a href="https://www.linkedin.com/in/yaser-haddara-150496/"><img src="./assets/img/faces/yaser.jpg" alt="..."></a>
                                 </div>
                                 <div class="card-body">
                                     <a href="#paper-kit">
@@ -570,7 +570,7 @@
                         <div class="col-md-3 animatable fadeInUp">
                             <div class="card card-profile card-plain">
                                 <div class="card-avatar">
-                                    <a href="#avatar"><img src="./assets/img/faces/davidsontim.jpg" alt="..."></a>
+                                    <a href="https://www.linkedin.com/in/tim-davidson-95040248/"><img src="./assets/img/faces/davidsontim.jpg" alt="..."></a>
                                 </div>
                                 <div class="card-body">
                                     <a href="#paper-kit">
@@ -589,7 +589,7 @@
                         <div class="col-md-3 animatable fadeInUp">
                             <div class="card card-profile card-plain">
                                 <div class="card-avatar">
-                                    <a href="#avatar"><img src="./assets/img/faces/sirouspour.jpg" alt="..."></a>
+                                    <a href="https://www.linkedin.com/in/shahin-sirouspour-07118520/"><img src="./assets/img/faces/sirouspour.jpg" alt="..."></a>
                                 </div>
                                 <div class="card-body">
                                     <a href="#paper-kit">
@@ -610,7 +610,7 @@
                         <div class="col-md-3 animatable fadeInUp">
                             <div class="card card-profile card-plain">
                                 <div class="card-avatar">
-                                    <a href="#avatar"><img src="./assets/img/faces/shirani.jpg" alt="..."></a>
+                                    <a href="https://www.linkedin.com/in/shahram-shirani-4104423/"><img src="./assets/img/faces/shirani.jpg" alt="..."></a>
                                 </div>
                                 <div class="card-body">
                                     <a href="#paper-kit">
@@ -622,6 +622,25 @@
                                     <p class="card-description text-center">
                                         Department of Electrical & Computer Engineering
                                         
+                                    </p>
+                                </div>
+                            </div>
+                        </div>
+                        <!-- Dr. Huawei Zhu -->
+                        <div class="col-md-3 animatable fadeInUp">
+                            <div class="card card-profile card-plain">
+                                <div class="card-avatar">
+                                    <a href="https://www.linkedin.com/in/huawei-zhu/"><img src="./assets/img/faces/huawei.jpg" alt="..."></a>
+                                </div>
+                                <div class="card-body">
+                                    <a href="#paper-kit">
+                                        <div class="author">
+                                            <h4 class="card-title">Huawei Zhu</h4>
+                                            <h6 class="card-category">Ph.D Candidate</h6>
+                                        </div>
+                                    </a>
+                                    <p class="card-description text-center">
+                                        Department of Electrical & Computer Engineering                                       
                                     </p>
                                 </div>
                             </div>
