--- a/index.html
+++ b/index.html
@@ -206,8 +206,8 @@
                 <div class="container">
                     <div class="row animatable fadeInUp">
                         <div class="col-md-8 ml-auto mr-auto">
-                                <br>
-                                <br>
+                            <br>
+                            <br>
                             <img src="assets/img/robomaster.png" style="width: inherit">
                             <br>
                             <br>
@@ -379,7 +379,8 @@
                         <div class="col-md-4 animatable fadeInUp">
                             <div class="card card-profile card-plain">
                                 <div class="card-avatar">
-                                    <a href="https://www.linkedin.com/in/bingchen-ji-947093135/"><img src="./assets/img/faces/jbc.jpg" alt="..."></a>
+                                    <a href="https://www.linkedin.com/in/bingchen-ji-947093135/"><img src="./assets/img/faces/jbc.jpg"
+                                            alt="..."></a>
                                 </div>
                                 <div class="card-body">
                                     <a href="#paper-kit">
@@ -402,7 +403,8 @@
                         <div class="col-md-4 animatable fadeInUp">
                             <div class="card card-profile card-plain">
                                 <div class="card-avatar">
-                                    <a href="https://www.linkedin.com/in/haoran-liu/"><img src="./assets/img/faces/haoran2.jpg" alt="..."></a>
+                                    <a href="https://www.linkedin.com/in/haoran-liu/"><img src="./assets/img/faces/haoran2.jpg"
+                                            alt="..."></a>
                                 </div>
                                 <div class="card-body">
                                     <a href="#paper-kit">
@@ -420,7 +422,8 @@
                         <div class="col-md-4 animatable fadeInUp">
                             <div class="card card-profile card-plain">
                                 <div class="card-avatar">
-                                    <a href="https://www.linkedin.com/in/jarvis-wang/"><img src="./assets/img/faces/jarvis.jpg" alt="..."></a>
+                                    <a href="https://www.linkedin.com/in/jarvis-wang/"><img src="./assets/img/faces/jarvis.jpg"
+                                            alt="..."></a>
                                 </div>
                                 <div class="card-body">
                                     <a href="#paper-kit">
@@ -438,7 +441,7 @@
                         <div class="col-md-4 animatable fadeInUp">
                             <div class="card card-profile card-plain">
                                 <div class="card-avatar">
-                                    <a href="https://www.linkedin.com/in/zeyi-yu-4ab80aa6/"><img src="./assets/img/faces/edward.jpg" alt="..."></a>
+                                    <a href="#avatar"><img src="./assets/img/faces/edward.jpg" alt="..."></a>
                                 </div>
                                 <div class="card-body">
                                     <a href="#paper-kit">
@@ -456,7 +459,7 @@
                         <div class="col-md-4 animatable fadeInUp">
                             <div class="card card-profile card-plain">
                                 <div class="card-avatar">
-                                    <a href="https://www.linkedin.com/in/chengxin-liu/"><img src="./assets/img/faces/leo.jpg" alt="..."></a>
+                                    <a href="#avatar"><img src="./assets/img/faces/leo.jpg" alt="..."></a>
                                 </div>
                                 <div class="card-body">
                                     <a href="#paper-kit">
@@ -474,7 +477,8 @@
                         <div class="col-md-4 animatable fadeInUp">
                             <div class="card card-profile card-plain">
                                 <div class="card-avatar">
-                                    <a href="https://www.linkedin.com/in/tonyangz/"><img src="./assets/img/faces/tony.jpg" alt="..."></a>
+                                    <a href="https://www.linkedin.com/in/tonyangz/"><img src="./assets/img/faces/tony.jpg"
+                                            alt="..."></a>
                                 </div>
                                 <div class="card-body">
                                     <a href="#paper-kit">
@@ -492,7 +496,8 @@
                         <div class="col-md-4 animatable fadeInUp">
                             <div class="card card-profile card-plain">
                                 <div class="card-avatar">
-                                    <a href="https://www.linkedin.com/in/james-cheng-5a5a08123/"><img src="./assets/img/faces/james.jpeg" alt="..."></a>
+                                    <a href="https://www.linkedin.com/in/james-cheng-5a5a08123/"><img src="./assets/img/faces/james.jpeg"
+                                            alt="..."></a>
                                 </div>
                                 <div class="card-body">
                                     <a href="#paper-kit">
@@ -510,7 +515,8 @@
                         <div class="col-md-4 animatable fadeInUp">
                             <div class="card card-profile card-plain">
                                 <div class="card-avatar">
-                                    <a href="https://www.linkedin.com/in/rudy-liu-a40072136/"><img src="./assets/img/faces/rudy.jpg" alt="..."></a>
+                                    <a href="https://www.linkedin.com/in/rudy-liu-a40072136/"><img src="./assets/img/faces/rudy.jpg"
+                                            alt="..."></a>
                                 </div>
                                 <div class="card-body">
                                     <a href="#paper-kit">
@@ -528,7 +534,8 @@
                         <div class="col-md-4 animatable fadeInUp">
                             <div class="card card-profile card-plain">
                                 <div class="card-avatar">
-                                    <a href="https://www.linkedin.com/in/raghibq/"><img src="./assets/img/faces/raghib.jpg" alt="..."></a>
+                                    <a href="https://www.linkedin.com/in/raghibq/"><img src="./assets/img/faces/raghib.jpg"
+                                            alt="..."></a>
                                 </div>
                                 <div class="card-body">
                                     <a href="#paper-kit">
@@ -551,7 +558,7 @@
                         <div class="col-md-3 animatable fadeInUp">
                             <div class="card card-profile card-plain">
                                 <div class="card-avatar">
-                                    <a href="https://www.linkedin.com/in/yaser-haddara-150496/"><img src="./assets/img/faces/yaser.jpg" alt="..."></a>
+                                    <a href="#avatar"><img src="./assets/img/faces/yaser.jpg" alt="..."></a>
                                 </div>
                                 <div class="card-body">
                                     <a href="#paper-kit">
@@ -570,7 +577,7 @@
                         <div class="col-md-3 animatable fadeInUp">
                             <div class="card card-profile card-plain">
                                 <div class="card-avatar">
-                                    <a href="https://www.linkedin.com/in/tim-davidson-95040248/"><img src="./assets/img/faces/davidsontim.jpg" alt="..."></a>
+                                    <a href="#avatar"><img src="./assets/img/faces/davidsontim.jpg" alt="..."></a>
                                 </div>
                                 <div class="card-body">
                                     <a href="#paper-kit">
@@ -589,7 +596,7 @@
                         <div class="col-md-3 animatable fadeInUp">
                             <div class="card card-profile card-plain">
                                 <div class="card-avatar">
-                                    <a href="https://www.linkedin.com/in/shahin-sirouspour-07118520/"><img src="./assets/img/faces/sirouspour.jpg" alt="..."></a>
+                                    <a href="#avatar"><img src="./assets/img/faces/sirouspour.jpg" alt="..."></a>
                                 </div>
                                 <div class="card-body">
                                     <a href="#paper-kit">
@@ -610,7 +617,7 @@
                         <div class="col-md-3 animatable fadeInUp">
                             <div class="card card-profile card-plain">
                                 <div class="card-avatar">
-                                    <a href="https://www.linkedin.com/in/shahram-shirani-4104423/"><img src="./assets/img/faces/shirani.jpg" alt="..."></a>
+                                    <a href="#avatar"><img src="./assets/img/faces/shirani.jpg" alt="..."></a>
                                 </div>
                                 <div class="card-body">
                                     <a href="#paper-kit">
@@ -621,7 +628,7 @@
                                     </a>
                                     <p class="card-description text-center">
                                         Department of Electrical & Computer Engineering
-                                        
+
                                     </p>
                                 </div>
                             </div>
@@ -630,7 +637,7 @@
                         <div class="col-md-3 animatable fadeInUp">
                             <div class="card card-profile card-plain">
                                 <div class="card-avatar">
-                                    <a href="https://www.linkedin.com/in/huawei-zhu/"><img src="./assets/img/faces/huawei.jpg" alt="..."></a>
+                                    <a href="#avatar"><img src="./assets/img/faces/shirani.jpg" alt="..."></a>
                                 </div>
                                 <div class="card-body">
                                     <a href="#paper-kit">
@@ -640,7 +647,8 @@
                                         </div>
                                     </a>
                                     <p class="card-description text-center">
-                                        Department of Electrical & Computer Engineering                                       
+                                        Department of Electrical & Computer Engineering
+
                                     </p>
                                 </div>
                             </div>
@@ -903,25 +911,36 @@
             <div class="container animatable fadeInUp">
                 <div class="row">
                     <div class="col-md-8 ml-auto mr-auto">
-                        <h1 class="title">Join Our Team</h1>
+                        <!-- <h1 class="title">Join Our Team</h1>
                         <h5 id="test" class="description animated">We take pride in the development of everyone on the
                             team. The experience and skills that people develop in all areas is better than anything
                             that could be achieved at a similar age in the workplace. Our team is a challenge in
                             engineering, business, and project management; we are always looking for new members to
                             expand our team in a diverse range of faculties from engineering to business. Come to our
                             recruitment sessions or just reach out if you are interested in what we do.
+                        </h5> -->
+                        <h1 class="title">Become our operators</h1>
+                        <h5 id="test" class="description animated">Interested in FPS games and RC racing? Do you fly
+                            drones and FPV? Are you an experienced Marauder on the esports battlefield? Here's your
+                            chance! We are recruiting robot operators to represent our team to attend the RoboMaster
+                            final competition in Shenzhen, China in mid-July (especially if you are good at FPS games).
+                            Part of the travel expense will be reimbursed! 
                         </h5>
 
                         <h4 id="test" class="description animated" style="color: white">
-                            Feel free to come out if you are interested in learning more about our team!
+                            If you are interested in this amazing oppotunity, feel free to come!
                         </h4>
                         <br>
                         <!-- <a href="#paper-kit" class="btn btn-danger btn-round">See Details</a> -->
                     </div>
                     <div class="col-md-12 ml-auto mr-auto">
-                        <button class="btn btn-danger btn-lg btn-fill" onclick="location.href='https://goo.gl/forms/BddLTtGix7bhx8P02'"
+                        <button class="btn btn-danger btn-lg btn-fill" onclick="location.href='https://forms.gle/JUEgjrhdYf6NjDda6'"
                             type="button">Apply Now</button>
                     </div>
+                    <!-- <div class="col-md-12 ml-auto mr-auto">
+                        <button class="btn btn-danger btn-lg btn-fill" onclick="location.href='https://goo.gl/forms/BddLTtGix7bhx8P02'"
+                            type="button">Apply Now</button>
+                    </div> -->
                 </div>
             </div>
         </div>
