updated sponsor logo

--- a/index.html
+++ b/index.html
@@ -528,15 +528,19 @@
                 <div class="container">
                     <h1 class="title animatable fadeInUp">Sponsors</h1>
                     <div class="row">
-                        <div class="col-sm-4 animatable fadeInUp">
+                        <div class="col-sm-3 animatable fadeInUp">
                             <img src="./assets/img/sponsors/maceng.png" style="height: 100px">
                         </div>
 
-                        <div class="col-sm-4 animatable fadeInUp">
+                        <div class="col-sm-3 animatable fadeInUp">
                             <img src="./assets/img/sponsors/dji.jpg" style="height: 120px">
                         </div>
-                        <div class="col-sm-4 animatable fadeInUp">
+                        <div class="col-sm-3 animatable fadeInUp">
                             <img src="./assets/img/sponsors/mcmaster.png" style="height: 100px">
+                        </div>
+
+                        <div class="col-sm-3 animatable fadeInUp">
+                            <img src="./assets/img/sponsors/mmri.jpg" style="height: 120px">
                         </div>
 
                     </div>
@@ -544,7 +548,7 @@
             </div>
 
             <!-- instagram gallery -->
-            <div id="instagram" class="section section-dark text-center container-fluid" style="background-image: url('assets/img/inst.jpg')">
+            <!-- <div id="instagram" class="section section-dark text-center container-fluid" style="background-image: url('assets/img/inst.jpg')">
                 <div class="container animatable fadeInUp">
                     <h1 class="title">Our Instagram Gallery</h1>
                     <br />
@@ -554,7 +558,9 @@
 
                 </div>
 
-            </div>
+            </div> -->
+            <script src="https://apps.elfsight.com/p/platform.js" defer></script>
+<div class="elfsight-app-4e03c8e2-bff5-44e1-ad08-0713ba4f58a8"></div>
 
             <!-- Contact Us -->
             <div id="contact" class="section text-center container-fluid">
