Added Sponsor Package

--- a/index.html
+++ b/index.html
@@ -757,6 +757,10 @@
                         <br />
                         <br />
                     </div>
+                    <div class="col-md-12 ml-auto mr-auto">
+                        <button class="btn btn-danger btn-lg btn-fill" onclick="location.href='./assets/files/MacRM-Sponsor-Package.pdf'"
+                            type="button">Sponsor Package</button>
+                    </div>
 
 
                 </div>
