Added sponsor package

--- a/index.html
+++ b/index.html
@@ -686,6 +686,15 @@
                         </div>
 
                     </div>
+
+                    <div class="col-md-12 ml-auto mr-auto animatable fadeInUp">
+                            <br />
+                            <br />
+                            <br />
+                            <br />
+                        <button class="btn btn-danger btn-lg btn-fill" onclick="location.href='./assets/files/MacRM_Sponsor_Package.pdf'"
+                            type="button">Sponsor Package</button>
+                    </div>
                 </div>
             </div>
 
@@ -897,6 +906,10 @@
                         <p>Or scan the above QR Code!</p>
                         <br />
                         <br />
+                    </div>
+                    <div class="col-md-12 ml-auto mr-auto">
+                        <button class="btn btn-danger btn-lg btn-fill" onclick="location.href='./assets/files/MacRM_Sponsor_Package.pdf'"
+                            type="button">Sponsor Package</button>
                     </div>
 
 
