--- a/index.html
+++ b/index.html
@@ -459,7 +459,7 @@
                         <div class="col-md-4 animatable fadeInUp">
                             <div class="card card-profile card-plain">
                                 <div class="card-avatar">
-                                    <a href="#avatar"><img src="./assets/img/faces/leo.jpg" alt="..."></a>
+                                    <a href="https://www.linkedin.com/in/chengxin-liu/"><img src="./assets/img/faces/leo.jpg" alt="..."></a>
                                 </div>
                                 <div class="card-body">
                                     <a href="#paper-kit">
@@ -541,6 +541,25 @@
                                     <a href="#paper-kit">
                                         <div class="author">
                                             <h4 class="card-title">Raghib Quader</h4>
+                                            <h6 class="card-category"></h6>
+                                        </div>
+                                    </a>
+                                    <p class="card-description text-center">
+                                    </p>
+                                </div>
+                            </div>
+                        </div>
+                        <!-- Helen Shelton -->
+                        <div class="col-md-4 animatable fadeInUp">
+                            <div class="card card-profile card-plain">
+                                <div class="card-avatar">
+                                    <a href="#avatar"><img src="./assets/img/faces/helen.jpg"
+                                            alt="..."></a>
+                                </div>
+                                <div class="card-body">
+                                    <a href="#paper-kit">
+                                        <div class="author">
+                                            <h4 class="card-title">Helen SHelton</h4>
                                             <h6 class="card-category"></h6>
                                         </div>
                                     </a>
