--- a/index.html
+++ b/index.html
@@ -559,7 +559,7 @@
                                 <div class="card-body">
                                     <a href="#paper-kit">
                                         <div class="author">
-                                            <h4 class="card-title">Helen SHelton</h4>
+                                            <h4 class="card-title">Helen Shelton</h4>
                                             <h6 class="card-category"></h6>
                                         </div>
                                     </a>
